# multisig_index

./: README.md  canister_ids.json  dfx.json
candid/: multisig_index.did
frontend/multisig_index/: index.d.ts  index.js  multisig_index.did.d.ts  multisig_index.did.js
scripts/: generate.sh
src/: Cargo.toml  lib.rs  methods.rs
src/logic/: cmc.rs  ledger.rs  store.rs
src/rust_declarations/: types.rs
wasm/: multisig_index.wasm
